force-app/main/default/objects/Purchase_Indent_Line_Item__c/Purchase_Indent_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Purchase Indent Line Item</label>
    <nameField>
        <label>Purchase Indent Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Indent Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>