force-app/main/default/objects/Purchase_Indent_Line_Item__c/fields/Product_Part__c.field-meta.xml
<CustomField>
    <fullName>Product_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Number</label>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Purchase Indent Line Items</relationshipLabel>
    <relationshipName>Purchase_Indent_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>