force-app/main/default/objects/Purchase_Indent_Line_Item__c/fields/Purchase_Indent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Indent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Indent</label>
    <referenceTo>Purchase_Indent__c</referenceTo>
    <relationshipLabel>Purchase Indent Line Items</relationshipLabel>
    <relationshipName>Purchase_Indent_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>