force-app/main/default/objects/Purchase_Indent_Line_Item__c/fields/Sales_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line Item</label>
    <referenceTo>Sales_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Purchase Indent Line Items</relationshipLabel>
    <relationshipName>Purchase_Indent_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>