force-app/main/default/objects/Purchase_Indent_Line_Item__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <label>Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>