force-app/main/default/objects/Purchase_Indent_Line_Item__c/fields/Stock_Actual__c.field-meta.xml
<CustomField>
    <fullName>Stock_Actual__c</fullName>
    <label>Stock Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>